German localization added. Some fixes

--- a/Locales/de/logobar.html
+++ b/Locales/de/logobar.html
@@ -1,5 +1,5 @@
 <div id="logobar" class="vcard">
-    <h1><span class="org">Bookinizer</span></h1>
-    <a id="contactus" href="#" title="Contact Us">Contact Us</a>
-    <strong class="note">Online Reservation Service</strong>
+    <h1><span class="org">Bookenizer</span></h1>
+    <a id="contactus" href="#" title="Kontakt mit uns">Kontakt Mit Uns</a>
+    <strong class="note">Online Reservierungsservice</strong>
 </div>
