--- a/Locales/de/statistics.html
+++ b/Locales/de/statistics.html
@@ -1,6 +1,6 @@
 <div id="statsblock" class="container" ng:init="getStatistics()">
-    <h2>Statistics</h2>
+    <h2>Statistiken</h2>
     <p><strong>{{statistics.hotels}}</strong> hotels</p>
-    <p><strong>{{statistics.offers}}</strong> offers</p>
-    <p><strong>{{statistics.booked}}</strong> booked</p>
+    <p><strong>{{statistics.offers}}</strong> angebote</p>
+    <p><strong>{{statistics.booked}}</strong> gebuchten</p>
 </div>
