--- a/Locales/de/topblock.html
+++ b/Locales/de/topblock.html
@@ -1,55 +1,52 @@
 <ul class="topblock right">
-    <li class="selected"><a href="#" title="Show your Selected hotels" id="lbl_Selected"
-                            class="noreload">Selected(9)</a>/
+    <li class="selected"><a href="#" title="Zeigen Sie Ihre Selected Hotels" id="lbl_Selected"
+                            class="noreload">Ausgewählt(9)</a>/
     </li>
-    <li><a href="#" title="FAQ and more" id="lbl_Help">Help</a> /</li>
+    <li><a href="#" title="FAQ und mehr" id="lbl_Help">Hilfe</a> /</li>
    <li class="switch">
-        <a href="#" id="bt_login" title="Welcome to full-featured system" class="noreload">Sign
-            in</a>
-                            <span id="block_register"> or <a href="#" id="bt_register"
-                                                             title="Register to get access to all site features"
-                                                             class="noreload">Register</a></span>
+        <a href="#" id="bt_login" title="Willkommen in vollem Funktionsumfang System" class="noreload">Log-in</a>
+                            <span id="block_register"> oder <a href="#" id="bt_register"
+                                                             title="Registrieren Sie erhalten Zugang zu allen Funktionen Website"
+                                                             class="noreload">Registrieren</a></span>
 
         <form id="loginform" action="">
             <div class="container">
                 <input type="text" id="mail" name="mail" class="login" value="E-mail"
                        defvalue="E-mail"/>
                 <input type="text" id="pass_open" name="pass_open" class="login" value="Password"
-                       defvalue="Password"/>
+                       defvalue="Passwort"/>
                 <input type="password" id="pass" name="pass" class="login" value=""/>
 
                 <div class="diags">
 
-                    <p id="lp_def"><a href="#" id="forgot" title="Get a new password on your e-mail">Forgot
-                        password?</a></p>
+                    <p id="lp_def"><a href="#" id="forgot" title="Holen Sie sich ein neues Passwort an Ihre E-Mail">Passwort
+                        vergessen?</a></p>
+                            ein neues Konto erstellen
+                    <p id="lp_bad_mail">Die angegebene E-Mail ist nicht im System registriert. Sie können versuchen ein anderes
+                        oder <a href="#">ein neues Konto erstellen</a>.</p>
 
-                    <p id="lp_bad_mail">The specified e-mail is not registered in the system. You
-                        may try another one or <a href="#">create a new account</a>.</p>
+                    <p id="lp_bad_pass">Passwort stimmt nicht überein. Sie können versuchen ein anderes oder <a
+                            href="#">Ihr Passwort zurücksetzen</a>.</p>
 
-                    <p id="lp_bad_pass">Password does not match. You may try another one or <a
-                            href="#">Reset your password</a>.</p>
+                    <p id="lp_no_mail_to_reset">Bitte geben Sie die E-Mail mit der Sie registriert. Wir schicken
+                        Ihnen ein Passwort-Reset Brief.</p>
 
-                    <p id="lp_no_mail_to_reset">Please enter the e-mail you registered with. We will
-                        send you a password reset letter.</p>
+                    <p id="lp_reset_pass_sent">Ein Passwort-Reset Brief ging nach E-Mail von Ihnen angegebene Adresse.</p>
 
-                    <p id="lp_reset_pass_sent">A password reset letter has been sent to e-mail
-                        address you specified.</p>
+                    <p id="lp_no_mail_to_register">Bitte geben Sie eine gültige E-Mail Sie möchten registriert werden.
+                        Wir senden Ihnen dann einen Link zu der Registrierung fortzufahren.</p>
 
-                    <p id="lp_no_mail_to_register">Please enter the valid e-mail you you wish to be
-                        registered with. We will send you a link to continue the registration.</p>
+                    <p id="lp_already_registered">Diese E-Mail ist bereits im System registriert.
+                        Sie können <a href="#" title="Holen Sie sich ein neues Passwort an Ihre E-Mail">Zurücksetzen
+                            von Passwörtern</a> der geben Sie eine andere und <a href="#">ein neues Konto registrieren</a>.</p>
 
-                    <p id="lp_already_registered">This e-mail is already registered in the system.
-                        You can <a href="#" title="Get a new password on your e-mail">reset
-                            password</a> or enter another one and <a href="#">register a new account</a>.</p>
-
-                    <p id="lp_do_register"><strong>Congratulations!</strong><br/>A validation letter
-                        has been sent to e-mail address you specified. Use it to complete your
-                        registration.</p>
+                    <p id="lp_do_register"><strong>Herzlichen Glückwunsch!</strong><br/>Eine Validierung Brief ging nach
+                        E-Mail von Ihnen angegebene Adresse. Verwenden Sie es um die Registrierung abzuschließen.</p>
                 </div>
 
                 <div class="clearer"></div>
                 <a href="#" id="bt_login_action" class="important"
-                   title="Get access to all site features.">Sign in</a>
+                   title="Holen Sie sich den Zugriff auf alle Funktionen Website.">Log-in</a>
 
                 <div class="clearer"></div>
             </div>
