--- a/Locales/de/topdestblock.html
+++ b/Locales/de/topdestblock.html
@@ -1,5 +1,5 @@
 <div id="topdestblock" class="container" ng:init="getTopDestinations()">
-    <h2>Top destinations</h2>
+    <h2>Top Reiseziele</h2>
     <ul ng:repeat="dest in topDestinations.locationList">
         <li><a href="#">{{dest.city}}</a>,{{dest.country}}</li>
     </ul>
