--- a/Locales/ru/hotelslist.html
+++ b/Locales/ru/hotelslist.html
@@ -1,28 +1,28 @@
 <div class="container">
-          <h2>Hotels</h2>
+          <h2>Отели</h2>
 
           <ul id="hotellistSwitcher" class="switcher">
-              <li class="popular">popular</li>
-              <li class="selected noprint"><a href="#" class="noreload" onclick="return switchHotellist()" title="Hotels you have chosen earlier">selected</a></li>
+              <li class="popular">популярные</li>
+              <li class="selected noprint"><a href="#" class="noreload" onclick="return switchHotellist()" title="Отели которые Вы отобрали ранее">выбранные</a></li>
           </ul>
 
           <div id="hotellist" class="popular"><div class="wrapper"><div class="opener"></div>
 
               <div class="hotel"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/1-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Описание отеля Mega Nippel Beach"><img src="files/hotels/1-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5"><span>*****</span></div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Другие отели Амстердама">Амстердам</a>, Голландия</p>
+                      <p class="info">от <strong>EUR 564</strong></p>
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
 
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Add to Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Больше информации об этом отеле" target="_blank">Узнать больше</a> / <a href="#" title="Добавить в избранные">Добавить в избранные</a></p>
                   </div>
 
                   </div>
@@ -33,19 +33,19 @@
 
               <div class="hotel selected"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/2-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Описание отеля Mega Nippel Beach"><img src="files/hotels/2-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5">*****</div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Другие отели Амстердама">Амстердам</a>, Голландия</p>
+                      <p class="info">от <strong>EUR 564</strong></p>
 
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Remove from Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Больше информации об этом отеле" target="_blank">Узнать больше</a> / <a href="#" title="Удалить из избранных">Удалить из избранных</a></p>
                   </div>
 
                   </div>
@@ -57,19 +57,19 @@
 
               <div class="hotel selected"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/3-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Описание отеля Mega Nippel Beach"><img src="files/hotels/3-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5">*****</div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Другие отели Амстердама">Амстердам</a>, Голландия</p>
+                      <p class="info">от <strong>EUR 564</strong></p>
 
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Remove from Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Больше информации об этом отеле" target="_blank">Узнать больше</a> / <a href="#" title="Удалить из избранных">Удалить из избранных</a></p>
                   </div>
 
                   </div>
@@ -81,19 +81,19 @@
 
               <div class="hotel"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/4-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Описание отеля Mega Nippel Beach"><img src="files/hotels/4-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5">*****</div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Другие отели Амстердама">Амстердам</a>, Голландия</p>
+                      <p class="info">от <strong>EUR 564</strong></p>
 
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Add to Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Больше информации об этом отеле" target="_blank">Узнать больше</a> / <a href="#" title="Добавить в избранные">Добавить в избранные</a></p>
                   </div>
 
                   </div>
@@ -105,19 +105,19 @@
 
               <div class="hotel selected"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/5-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Описание отеля Mega Nippel Beach"><img src="files/hotels/5-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5">*****</div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Другие отели Амстердама">Амстердам</a>, Голландия</p>
+                      <p class="info">от <strong>EUR 564</strong></p>
 
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Remove from Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Больше информации об этом отеле" target="_blank">Узнать больше</a> / <a href="#" title="Удалить из избранных">Удалить из избранных</a></p>
                   </div>
 
                   </div>
@@ -128,17 +128,17 @@
               </div>
 
               <div class="paging">
-                  <a href="#" title="Page 2" class="nou">←</a>
-                  <a href="#" title="Page 3">3</a>
-                  <a href="#" title="Page 4">4</a>
-                  <a href="#" title="Page 5">5</a>
-                  <a href="#" title="Page 6">6</a>
+                  <a href="#" title="Страница 2" class="nou">←</a>
+                  <a href="#" title="Страница 3">3</a>
+                  <a href="#" title="Страница 4">4</a>
+                  <a href="#" title="Страница 5">5</a>
+                  <a href="#" title="Страница 6">6</a>
                   7
-                  <a href="#" title="Page 8">8</a>
-                  <a href="#" title="Page 9">9</a>
-                  <a href="#" title="Page 10">10</a>
-                  <a href="#" title="Page 11">11</a>
-                  <a href="#" title="Page 12" class="nou">→</a>
+                  <a href="#" title="Страница 8">8</a>
+                  <a href="#" title="Страница 9">9</a>
+                  <a href="#" title="Страница 10">10</a>
+                  <a href="#" title="Страница 11">11</a>
+                  <a href="#" title="Страница 12" class="nou">→</a>
               </div>
           </div>
 
