--- a/Locales/de/footer.html
+++ b/Locales/de/footer.html
@@ -1,5 +1,5 @@
 
 <div id="footer">
-    <p>© 2011 Bookinizer Inc. All rights reserved <span class="noprint">/ <a href="#">Usage agreement</a> / <a href="#">Privacy
-        policy</a> / <a href="#">About Bookinizer.com</a></span></p>
+    <p>© 2011 Bookenizer Inc. Alle Rechte vorbehalten <span class="noprint">/ <a href="#">Nutzungsvertrag</a> / <a href="#">Datenschutz
+    </a> / <a href="#">Über Bookenizer.com</a></span></p>
 </div>
