--- a/Locales/de/hotelslist.html
+++ b/Locales/de/hotelslist.html
@@ -2,27 +2,27 @@
           <h2>Hotels</h2>
 
           <ul id="hotellistSwitcher" class="switcher">
-              <li class="popular">popular</li>
-              <li class="selected noprint"><a href="#" class="noreload" onclick="return switchHotellist()" title="Hotels you have chosen earlier">selected</a></li>
+              <li class="popular">beliebt</li>
+              <li class="selected noprint"><a href="#" class="noreload" onclick="return switchHotellist()" title="Hotels haben Sie früher gewählt">ausgewählt</a></li>
           </ul>
 
           <div id="hotellist" class="popular"><div class="wrapper"><div class="opener"></div>
 
               <div class="hotel"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/1-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Mega Nippel Beach hotelbeschreibung"><img src="files/hotels/1-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5"><span>*****</span></div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Weitere Hotels in Amsterdam">Amsterdam</a>, Holland</p>
+                      <p class="info">aus <strong>EUR 564</strong></p>
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
 
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Add to Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Lesen Sie mehr über dieses Hotel" target="_blank">Lesen Sie mehr</a> / <a href="#" title="Schreibe Hotel zu Ihren ausgewählten">Zur Auswahl</a></p>
                   </div>
 
                   </div>
@@ -33,19 +33,19 @@
 
               <div class="hotel selected"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/2-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Mega Nippel Beach hotelbeschreibung"><img src="files/hotels/2-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5">*****</div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Weitere Hotels in Amsterdam">Amsterdam</a>, Holland</p>
+                      <p class="info">aus <strong>EUR 564</strong></p>
 
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Remove from Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Lesen Sie mehr über dieses Hotel" target="_blank">Lesen Sie mehr</a> / <a href="#" title="Entfernen ein Hotel aus Ihrem ausgewählten">Entfernen aus Selected</a></p>
                   </div>
 
                   </div>
@@ -57,19 +57,19 @@
 
               <div class="hotel selected"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/3-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Mega Nippel Beach hotelbeschreibung"><img src="files/hotels/3-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5">*****</div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Weitere Hotels in Amsterdam">Amsterdam</a>, Holland</p>
+                      <p class="info">aus <strong>EUR 564</strong></p>
 
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Remove from Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Lesen Sie mehr über dieses Hotel" target="_blank">Lesen Sie mehr</a> / <a href="#" title="Entfernen ein Hotel aus Ihrem ausgewählten">Entfernen aus Selected</a></p>
                   </div>
 
                   </div>
@@ -81,19 +81,19 @@
 
               <div class="hotel"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/4-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Mega Nippel Beach hotelbeschreibung"><img src="files/hotels/4-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5">*****</div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Weitere Hotels in Amsterdam">Amsterdam</a>, Holland</p>
+                      <p class="info">aus <strong>EUR 564</strong></p>
 
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Add to Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Lesen Sie mehr über dieses Hotel" target="_blank">Lesen Sie mehr</a> / <a href="#" title="Schreibe Hotel zu Ihren ausgewählten">Zur Auswahl</a></p>
                   </div>
 
                   </div>
@@ -105,19 +105,19 @@
 
               <div class="hotel selected"><div class="opener"></div><div class="container">
 
-                  <a href="#" title="Mega Nippel Beach hotel description"><img src="files/hotels/5-small.jpg" alt="Mega Nippel Beach" /></a>
+                  <a href="#" title="Mega Nippel Beach hotelbeschreibung"><img src="files/hotels/5-small.jpg" alt="Mega Nippel Beach" /></a>
 
                   <div class="hoteldescr">
                       <h3>Mega Nippel Beach</h3>
 
                       <div class="stars stars-5">*****</div>
 
-                      <p class="info"><a href="#" title="More hotels in Amsterdam">Amsterdam</a>, Holland</p>
-                      <p class="info">from <strong>EUR 564</strong></p>
+                      <p class="info"><a href="#" title="Weitere Hotels in Amsterdam">Amsterdam</a>, Holland</p>
+                      <p class="info">aus <strong>EUR 564</strong></p>
 
 
                       <p class="descr">Located on the El Camino Real, the Hotel is easily accessible to Hwy 101, I-280, Hwy 85 and the San Jose International Airport. Just minutes from Silicon Valley's prime destinations.</p>
-                      <p class="noprint"><a href="main-hotelcard.html" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#" title="Remove hotel from your Selected">Remove from Selected</a></p>
+                      <p class="noprint"><a href="main-hotelcard.html" title="Lesen Sie mehr über dieses Hotel" target="_blank">Lesen Sie mehr</a> / <a href="#" title="Entfernen ein Hotel aus Ihrem ausgewählten">Entfernen aus Selected</a></p>
                   </div>
 
                   </div>
@@ -128,17 +128,17 @@
               </div>
 
               <div class="paging">
-                  <a href="#" title="Page 2" class="nou">←</a>
-                  <a href="#" title="Page 3">3</a>
-                  <a href="#" title="Page 4">4</a>
-                  <a href="#" title="Page 5">5</a>
-                  <a href="#" title="Page 6">6</a>
+                  <a href="#" title="Seite 2" class="nou">←</a>
+                  <a href="#" title="Seite 3">3</a>
+                  <a href="#" title="Seite 4">4</a>
+                  <a href="#" title="Seite 5">5</a>
+                  <a href="#" title="Seite 6">6</a>
                   7
-                  <a href="#" title="Page 8">8</a>
-                  <a href="#" title="Page 9">9</a>
-                  <a href="#" title="Page 10">10</a>
-                  <a href="#" title="Page 11">11</a>
-                  <a href="#" title="Page 12" class="nou">→</a>
+                  <a href="#" title="Seite 8">8</a>
+                  <a href="#" title="Seite 9">9</a>
+                  <a href="#" title="Seite 10">10</a>
+                  <a href="#" title="Seite 11">11</a>
+                  <a href="#" title="Seite 12" class="nou">→</a>
               </div>
           </div>
 
