--- a/Locales/de/searchform.html
+++ b/Locales/de/searchform.html
@@ -4,19 +4,19 @@
 
     <div class="label">
         <span class="label">1</span>
-				<span class="host"><input type="text" name="city" class="dest" value="City" defValue="Город"
+				<span class="host"><input type="text" name="city" class="dest" value="City" defValue="Stadt"
                                           suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>
-					<span class="diags">Sorry, we have no offers for this city</span>
+					<span class="diags">Leider haben wir keine Angebote für diese Stadt</span>
 				</span>
     </div>
 
     <div class="label before-last">
         <span class="label">2</span>
-        <label>from <input type="text" name="dateFrom" id="dateFrom" class="date" value="22.10.2008"
+        <label>aus <input type="text" name="dateFrom" id="dateFrom" class="date" value="22.10.2008"
                            onchange="/*fixDate(this)*/"/></label>
-        <label>to <input type="text" name="dateTo" id="dateTo" class="date" value="24.10.2008"
+        <label>bis <input type="text" name="dateTo" id="dateTo" class="date" value="24.10.2008"
                          onchange="/*fixDate(this)*/"/></label>
-        <span class="search_nights_num">2</span> <span class="search_nights_word">nights</span>
+        <span class="search_nights_num">2</span> <span class="search_nights_word">nacht(e)</span>
     </div>
 
     <script type="text/javascript">
@@ -25,7 +25,7 @@
     </script>
 
     <div class="label last">
-        <span class="label">3</span><input type="submit" name="find" value="Найти отели" class="submit"/>
+        <span class="label">3</span><input type="submit" name="find" value="Suche hotels" class="submit"/>
     </div>
 
     <div class="clearer"></div>
@@ -37,20 +37,20 @@
     <input type="hidden" name="cityId" value="0"/>
 
     <div class="label">
-        <span class="label">Destination</span>
-				<span class="host"><input type="text" name="city" class="dest" value="City" defValue="City"
+        <span class="label">Reiseziel</span>
+				<span class="host"><input type="text" name="city" class="dest" value="City" defValue="Stadt"
                                           suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>
-				<span class="diags">Sorry, we have no offers for this city</span>
+				<span class="diags">Leider haben wir keine Angebote für diese Stadt</span>
 				</span>
     </div>
 
     <div class="label">
-        <span class="label">Dates</span>
-        <label>from <input type="text" name="advDateFrom" id="advDateFrom" class="date" value="22.10.2008"
+        <span class="label">Termine</span>
+        <label>aus <input type="text" name="advDateFrom" id="advDateFrom" class="date" value="22.10.2008"
                            onchange="fixDate(this)"/></label>
-        <label>to <input type="text" name="advDateTo" id="advDateTo" class="date" value="24.10.2008"
+        <label>bis <input type="text" name="advDateTo" id="advDateTo" class="date" value="24.10.2008"
                          onchange="fixDate(this)"/></label>
-        for <span class="search_nights_num">2</span> <span class="search_nights_word">nights</span>
+        für <span class="search_nights_num">2</span> <span class="search_nights_word">nacht(e)</span>
     </div>
 
     <script type="text/javascript">
@@ -59,18 +59,18 @@
     </script>
 
     <div class="label">
-        <span class="label">Number of Persons</span>
+        <span class="label">Anzahl der Personen</span>
         <input type="text" name="numberOfPersons" class="numberOfPersons" value="2"/>
     </div>
 
     <div class="label">
-        <span class="label">Lodging Type</span>
-        <label><input type="checkbox" name="lodgingTypeRoom" value="1"/> Room</label>
-        <label><input type="checkbox" name="lodgingTypeApart" value="1"/> Apartments</label>
+        <span class="label">Art des Zimmers</span>
+        <label><input type="checkbox" name="lodgingTypeRoom" value="1"/> Zimmer</label>
+        <label><input type="checkbox" name="lodgingTypeApart" value="1"/> Wohnungen</label>
     </div>
 
     <div class="label">
-        <span class="label">Stars</span>
+        <span class="label">Sternen</span>
         <label><input type="checkbox" name="stars2" value="1"/> 2</label>
         <label><input type="checkbox" name="stars3" value="1"/> 3</label>
         <label><input type="checkbox" name="stars4" value="1"/> 4</label>
@@ -78,27 +78,27 @@
     </div>
 
     <div class="label">
-        <span class="label">Meals</span>
-        <label><input type="checkbox" name="mealsFull" value="1"/> Full Board</label>
-        <label><input type="checkbox" name="mealsHalf" value="1"/> Half Board</label>
-        <label><input type="checkbox" name="mealsNo" value="1"/> No Board</label>
+        <span class="label">Mahlzeiten</span>
+        <label><input type="checkbox" name="mealsFull" value="1"/> Vollpension</label>
+        <label><input type="checkbox" name="mealsHalf" value="1"/> Halbpension</label>
+        <label><input type="checkbox" name="mealsNo" value="1"/> Kein Board</label>
     </div>
 
     <div class="label">
-        <span class="label">Price per night</span>
-        <label>from <input type="text" name="pricePerNightLow" class="price_per_night_low" value=""/></label>
-        <label>to <input type="text" name="pricePerNightHigh" class="price_per_night_high" value=""/></label>
+        <span class="label">Preis pro Nacht</span>
+        <label>aus <input type="text" name="pricePerNightLow" class="price_per_night_low" value=""/></label>
+        <label>bis <input type="text" name="pricePerNightHigh" class="price_per_night_high" value=""/></label>
     </div>
 
     <div class="label">
-        <span class="label">Facilities</span>
-        <label><input type="checkbox" name="facilities1" value="1"/> Parking</label>
+        <span class="label">Einrichtungen</span>
+        <label><input type="checkbox" name="facilities1" value="1"/> Parken</label>
         <label><input type="checkbox" name="facilities2" value="1"/> Internet</label>
-        <label><input type="checkbox" name="facilities3" value="1"/> Conference Hall</label>
+        <label><input type="checkbox" name="facilities3" value="1"/> Kongressräume</label>
     </div>
 
     <div class="label last">
-        <span class="label">Hotels</span><input type="submit" name="submit" value="Find" class="submit"/>
+        <span class="label">Hotels</span><input type="submit" name="submit" value="Suchen" class="submit"/>
     </div>
 
     <div class="clearer"></div>
