--- a/Locales/ru/searchform.html
+++ b/Locales/ru/searchform.html
@@ -6,17 +6,17 @@
         <span class="label">1</span>
 				<span class="host"><input type="text" name="city" class="dest" value="Город" defValue="Город"
                                           suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>
-					<span class="diags">Sorry, we have no offers for this city</span>
+					<span class="diags">Извините, у нас нет предложений для этого города</span>
 				</span>
     </div>
 
     <div class="label before-last">
         <span class="label">2</span>
-        <label>from <input type="text" name="dateFrom" id="dateFrom" class="date" value="22.10.2008"
+        <label>с <input type="text" name="dateFrom" id="dateFrom" class="date" value="22.10.2008"
                            onchange="/*fixDate(this)*/"/></label>
-        <label>to <input type="text" name="dateTo" id="dateTo" class="date" value="24.10.2008"
+        <label>по <input type="text" name="dateTo" id="dateTo" class="date" value="24.10.2008"
                          onchange="/*fixDate(this)*/"/></label>
-        <span class="search_nights_num">2</span> <span class="search_nights_word">ночи(-ей)</span>
+        на <span class="search_nights_num">2</span> <span class="search_nights_word">ночи(-ей)</span>
     </div>
 
     <script type="text/javascript">
@@ -25,7 +25,7 @@
     </script>
 
     <div class="label last">
-        <span class="label">3</span><input type="submit" name="find" value="Найти отели" class="submit"/>
+        <span class="label">3</span><input type="submit" name="find" value="Найти" class="submit"/>
     </div>
 
     <div class="clearer"></div>
@@ -38,9 +38,9 @@
 
     <div class="label">
         <span class="label">Город</span>
-				<span class="host"><input type="text" name="city" class="dest" value="City" defValue="City"
+				<span class="host"><input type="text" name="city" class="dest" value="City" defValue="Город"
                                           suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>
-				<span class="diags">Sorry, we have no offers for this city</span>
+				<span class="diags">Извините, у нас нет предложений для этого города</span>
 				</span>
     </div>
 
@@ -66,11 +66,11 @@
     <div class="label">
         <span class="label">Тип помещения</span>
         <label><input type="checkbox" name="lodgingTypeRoom" value="1"/> Комната</label>
-        <label><input type="checkbox" name="lodgingTypeApart" value="1"/> Аппартаменты</label>
+        <label><input type="checkbox" name="lodgingTypeApart" value="1"/> Апартаменты</label>
     </div>
 
     <div class="label">
-        <span class="label">Категория(звезд)</span>
+        <span class="label">Кол-во звёзд</span>
         <label><input type="checkbox" name="stars2" value="1"/> 2</label>
         <label><input type="checkbox" name="stars3" value="1"/> 3</label>
         <label><input type="checkbox" name="stars4" value="1"/> 4</label>
@@ -81,7 +81,7 @@
         <span class="label">Питание</span>
         <label><input type="checkbox" name="mealsFull" value="1"/> Полный пансион</label>
         <label><input type="checkbox" name="mealsHalf" value="1"/> Полупансион</label>
-        <label><input type="checkbox" name="mealsNo" value="1"/> Без питанияя</label>
+        <label><input type="checkbox" name="mealsNo" value="1"/> Без питания</label>
     </div>
 
     <div class="label">
