Dropdown with multiple choices added.

--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -177,9 +177,14 @@
 
     <div class="label">
         <span class="label">Facilities</span>
-        <label><input type="checkbox" name="facilities1" value="1"/> Parking</label>
-        <label><input type="checkbox" name="facilities2" value="1"/> Internet</label>
-        <label><input type="checkbox" name="facilities3" value="1"/> Conference Hall</label>
+        <select id="facilities" name="facilities">
+            <option value="PARKING"> Parking</option>
+            <option value="INTERNET"> Internet</option>
+            <option value="CONFERENCE_HALL"> Conference Hall</option>
+            <option value="POOL"> Pool</option>
+            <option value="SKI_RENTAL"> Ski Rental</option>
+            <option value="PETS_ALLOWED"> Pets Allowed</option>
+        </select>
     </div>
 
     <div class="label last">
