--- a/Locales/de/logobar.html
+++ b/Locales/de/logobar.html
@@ -1,5 +1,5 @@
-<div id="logobar" class="vcard">
-    <h1><span class="org">Bookenizer</span></h1>
-    <a id="contactus" href="#" title="Kontakt mit uns">Kontakt Mit Uns</a>
-    <strong class="note">Online Reservierungsservice</strong>
+<div id="logobar">
+    <a id="logo" href="http://bookenizer.com"><img src="/img/logo.png" alt="Bookenizer"/></a>
+    <a id="contactus" href="#" title="Kontakt mit uns">Kontakt mit uns</a>
+    <strong>Online Reservierungsservice</strong>
 </div>
