--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -79,10 +79,9 @@
         </ul>
     </script>
     <script type="text/html" id="logobar_tmpl">
-        <h1><span class="org">Bookinizer</span></h1>
+        <a id="logo" href="http://bookenizer.com"><img src="/img/logo.png" alt="Bookenizer"/></a>
         <a id="contactus" href="#" title="Contact Us">Contact Us</a>
-        <strong class="note">Online Reservation Service</strong>
-    </script>
+        <strong>Online Reservation Service</strong>
     <script type="text/html" id="searchbar_tmpl">
         <div id="searchbar" class="open-full">
             <div class="container">
