--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -75,9 +75,9 @@
         </ul>
     </script>
     <script type="text/html" id="logobar_tmpl">
-        <h1><span class="org">Bookenizer</span></h1>
-        <a id="contactus" href="#" title="Contact Us">Контакты</a>
-        <strong class="note">Система Он-Лайн бронирования</strong>
+        <a id="logo" href="http://bookenizer.com"><img src="/img/logo.png" alt="Bookenizer"/></a>
+        <a id="contactus" href="#" title="Контакты">Контакты</a>
+        <strong>Система Он-Лайн бронирования</strong>
     </script>
     <script type="text/html" id="searchType_switcher_quick">
         <li class="search">быстрый</li>
