--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -98,7 +98,7 @@
     </script>
 
  <script type="text/html" id="searchform_tmpl_quick">
-    <form class="searchform quick" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded" >
+    <form class="searchform quick" id="searchform_quick" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded" >
     <input type="hidden" name="cityId" value="0"/>
 
     <div class="label">
@@ -116,7 +116,7 @@
     </div>
 
     <div class="label last">
-        <span class="label">3</span><input type="submit" name="find" value="Найти" class="submit"/>
+        <span class="label">3</span><input type="button" id="mkSearch" name="mkSearch" value="Найти" class="submit"/>
     </div>
 
     <div class="clearer"></div>
@@ -124,7 +124,7 @@
 </script>
 
 <script type="text/html" id="searchform_tmpl_advanced">
-<form class="searchform advanced" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
+<form class="searchform advanced"  id="searchform_advanced" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
     <input type="hidden" name="cityId" value="0"/>
 
     <div class="label">
@@ -143,39 +143,39 @@
 
     <div class="label">
         <span class="label">Кол-во человек</span>
-        <input type="text" name="numberOfPersons" class="numberOfPersons" value="2"/>
+        <input type="text" name="numberOfPersons" id="numberOfPersons" class="numberOfPersons" value="2"/>
     </div>
 
     <div class="label">
         <span class="label">Тип номера</span>
-        <label><input type="checkbox" name="lodgingTypeRoom" value="1"/> Комната</label>
-        <label><input type="checkbox" name="lodgingTypeApart" value="1"/> Апартаменты</label>
+        <label><input type="checkbox" name="lodgingTypeRoom" id="lodgingTypeRoom" value="1"/> Комната</label>
+        <label><input type="checkbox" name="lodgingTypeApart" id="lodgingTypeApart" value="1"/> Апартаменты</label>
     </div>
 
     <div class="label">
         <span class="label">Кол-во звёзд</span>
-        <label><input type="checkbox" name="stars2" value="1"/> 2</label>
-        <label><input type="checkbox" name="stars3" value="1"/> 3</label>
-        <label><input type="checkbox" name="stars4" value="1"/> 4</label>
-        <label><input type="checkbox" name="stars5" value="1"/> 5</label>
+        <label><input type="checkbox" name="stars2" id="stars2" value="1"/> 2</label>
+        <label><input type="checkbox" name="stars3" id="stars3" value="1"/> 3</label>
+        <label><input type="checkbox" name="stars4" id="stars4" value="1"/> 4</label>
+        <label><input type="checkbox" name="stars5" id="stars5" value="1"/> 5</label>
     </div>
 
     <div class="label">
         <span class="label">Питание</span>
-        <label><input type="checkbox" name="mealsFull" value="1"/> Полный пансион</label>
-        <label><input type="checkbox" name="mealsHalf" value="1"/> Полупансион</label>
-        <label><input type="checkbox" name="mealsNo" value="1"/> Без питанияя</label>
+        <label><input type="checkbox" name="mealsFull" id="mealsFull" value="1"/> Полный пансион</label>
+        <label><input type="checkbox" name="mealsHalf" id="mealsHalf" value="1"/> Полупансион</label>
+        <label><input type="checkbox" name="mealsNo" id="mealsNo" value="1"/> Без питанияя</label>
     </div>
 
     <div class="label">
         <span class="label">Цена за ночь</span>
-        <label>от <input type="text" name="pricePerNightLow" class="price_per_night_low" value=""/></label>
-        <label>до <input type="text" name="pricePerNightHigh" class="price_per_night_high" value=""/></label>
+        <label>от <input type="text" name="pricePerNightLow" id="pricePerNightLow" class="price_per_night_low" value=""/></label>
+        <label>до <input type="text" name="pricePerNightHigh" id="pricePerNightHigh" class="price_per_night_high" value=""/></label>
     </div>
 
     <div class="label">
         <span class="label">Дополнительно</span>
-        <select id="facilities" name="facilities" multiple="multiple">
+        <select id="facilities" name="facilities" id="facilities" multiple="multiple">
             <option value="PARKING"> Паркинг</option>
             <option value="INTERNET"> Интернет</option>
             <option value="CONFERENCE_HALL"> Конференц-зал</option>
@@ -186,7 +186,7 @@
     </div>
 
     <div class="label last">
-        <span class="label">Отели</span><input type="submit" name="submit" value="Find" class="submit"/>
+        <span class="label">Отели</span><input type="button" id="mkSearch" name="mkSearch" value="Найти" class="submit"/>
     </div>
 
     <div class="clearer"></div>
