Issue #2 resolved. Ugly bug with mutiple ajax requests fixed. Performance dramatically improved. TODO: new suggestor component still required because after upgrade jquery to 1.6 version old one became unusable.

--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -94,10 +94,10 @@
     </script>
     <script type="text/html" id="searchType_switcher_quick">
         <li class="search">quick</li>
-		<li><a href="#search/advanced" class="noreload search" title="More search parameters">advanced</a></li>
+		<li><a href="#!/search/advanced" class="noreload search" title="More search parameters">advanced</a></li>
     </script>
     <script type="text/html" id="searchType_switcher_advanced">
-		<li><a href="#search/quick" class="noreload search" title="More search parameters">quick</a></li>
+		<li><a href="#!/search/quick" class="noreload search" title="More search parameters">quick</a></li>
         <li class="search">advanced</li>
     </script>
     <script type="text/html" id="searchform_tmpl_quick">
