--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -81,10 +81,10 @@
     </script>
     <script type="text/html" id="searchType_switcher_quick">
         <li class="search">быстрый</li>
-		<li><a href="#search/advanced" class="noreload search" title="More search parameters">расширенный</a></li>
+		<li><a href="#!/search/advanced" class="noreload search" title="More search parameters">расширенный</a></li>
     </script>
     <script type="text/html" id="searchType_switcher_advanced">
-		<li><a href="#search/quick" class="noreload search" title="More search parameters">быстрый</a></li>
+		<li><a href="#!/search/quick" class="noreload search" title="More search parameters">быстрый</a></li>
         <li class="search">расширенный</li>
     </script>
     <script type="text/html" id="searchbar_tmpl">
