Issue #2 resolved. Ugly bug with mutiple ajax requests fixed. Performance dramatically improved. TODO: new suggestor component still required because after upgrade jquery to 1.6 version old one became unusable.

--- a/Locales/de/searchbar.html
+++ b/Locales/de/searchbar.html
@@ -1,8 +1,8 @@
 <div id="searchbar" class="open-full"><div class="container">
 		<h2>Suchen</h2>
 		<ul class="switcher">
-			<li><a href="#" class="noreload"  title="Less search parameters" ng:click="changeSearch('quick')">schnelle</a></li>
-			<li><a href="#" class="noreload"  title="More search parameters" ng:click="changeSearch('advanced')">erweiterte</a></li>
+			<li><a href="#" class="noreload"  title="Weniger Suchkriterien" ng:click="changeSearch('quick')">schnelle</a></li>
+			<li><a href="#" class="noreload"  title="Weitere Suchkriterien" ng:click="changeSearch('advanced')">erweiterte</a></li>
 		</ul>
         <ng:include src="resUrl('searchform')"></ng:include>
  </div>
